Add more intro info

--- a/00-outline.Rmd
+++ b/00-outline.Rmd
@@ -1,43 +1,51 @@
 # Outline {#outline .unnumbered}
 
+We have 4 hours total together, spread across two 2-hour sessions on two consecutive days.
+
+You've been assigned to one of the two following cohorts to attend both days:
+
+-   Cohort A: 1pm-3pm ET
+-   Cohort B: 8am-10am ET
+
+The plan for the two days are as follows.
 All times shown are in ET.
 
 ## Day one {.unnumbered}
 
-+---------------+--------------------------------------------------------+
-| Time          | Module                                                 |
-+===============+========================================================+
-| 08:00 - 08:15 | Introduction                                           |
-+---------------+--------------------------------------------------------+
-| 08:15 - 08:55 | 🍰 Let them eat cake first!                             |
-+---------------+--------------------------------------------------------+
-|               | 🗓️ Cherish day one                                     |
-+---------------+--------------------------------------------------------+
-| 08:55 - 09:05 | ☕ Break                                                |
-+---------------+--------------------------------------------------------+
-| 09:05 - 10:00 | ⌨️ Live code, early and often                          |
-+---------------+--------------------------------------------------------+
-|               | 💻 Provide feedback, instantly                          |
-+---------------+--------------------------------------------------------+
++---------------+-------------------------------------------------------+
+| Time          | Module                                                |
++===============+=======================================================+
+| 08:00 - 08:15 | Introduction                                          |
++---------------+-------------------------------------------------------+
+| 08:15 - 08:55 | 🍰 Let them eat cake first!                            |
++---------------+-------------------------------------------------------+
+|               | 🗓️ Cherish day one                                    |
++---------------+-------------------------------------------------------+
+| 08:55 - 09:05 | ☕ Break                                               |
++---------------+-------------------------------------------------------+
+| 09:05 - 10:00 | ⌨️ Live code, early and often                         |
++---------------+-------------------------------------------------------+
+|               | 💻 Provide feedback, instantly                         |
++---------------+-------------------------------------------------------+
 
 ## Day two {.unnumbered}
 
-+---------------+--------------------------------------------------------+
-| Time          | Module                                                 |
-+===============+========================================================+
-| 08:00 - 08:10 | Recap                                                  |
-+---------------+--------------------------------------------------------+
-| 08:10 - 08:55 | 🖼️ Leverage visuals                                    |
-+---------------+--------------------------------------------------------+
-|               | ℹ️ Help with finding help                              |
-+---------------+--------------------------------------------------------+
-|               | 🗣️ Define and pronounce terms                          |
-+---------------+--------------------------------------------------------+
-| 08:55 - 09:05 | ☕ Break                                                |
-+---------------+--------------------------------------------------------+
-| 09:05 - 10:00 | 🌈 Highlight diversity                                  |
-+---------------+--------------------------------------------------------+
-|               | 🖌️ Make room for creativity                            |
-+---------------+--------------------------------------------------------+
-|               | 🔎 Optimize discoverability                             |
-+---------------+--------------------------------------------------------+
++---------------+-------------------------------------------------------+
+| Time          | Module                                                |
++===============+=======================================================+
+| 08:00 - 08:10 | Recap                                                 |
++---------------+-------------------------------------------------------+
+| 08:10 - 08:55 | 🖼️ Leverage visuals                                   |
++---------------+-------------------------------------------------------+
+|               | ℹ️ Help with finding help                             |
++---------------+-------------------------------------------------------+
+|               | 🗣️ Define and pronounce terms                         |
++---------------+-------------------------------------------------------+
+| 08:55 - 09:05 | ☕ Break                                               |
++---------------+-------------------------------------------------------+
+| 09:05 - 10:00 | 🌈 Highlight diversity                                 |
++---------------+-------------------------------------------------------+
+|               | 🖌️ Make room for creativity                           |
++---------------+-------------------------------------------------------+
+|               | 🔎 Optimize discoverability                            |
++---------------+-------------------------------------------------------+
