--- a/00-start.Rmd
+++ b/00-start.Rmd
@@ -1,6 +1,6 @@
 # Start {#start .unnumbered}
 
-![](images/icons8-rocket-64.png){.cover} A few slides to introduce everyone, lay out the plan for the two days, and get you thinking about your own learning goals.
+![](images/icons8-rocket-64.png){.cover} Let's get started by introducing everyone, laying out the plan for the two days, and getting you thinking about your own learning goals.
 
 ```{=html}
 <iframe src="https://rstudio-education.github.io/wtf-teach-rstudio-global/materials/00-welcome/00-welcome.html" width="672px" height="379px">
