--- a/00-outline.Rmd
+++ b/00-outline.Rmd
@@ -1,6 +1,6 @@
 # Outline {#outline .unnumbered}
 
-`<img src="images/icons8-planner-64.png" class="cover" width="64" height="64"/>`{=html} We have 4 hours total together, spread across two 2-hour sessions on two consecutive days.
+![](images/icons8-calendar.png){.cover width="100" height="100"} We have 4 hours total together, spread across two 2-hour sessions on two consecutive days.
 
 You've been assigned to one of the two following cohorts to attend both days:
 
