--- a/01-cake.Rmd
+++ b/01-cake.Rmd
@@ -4,11 +4,10 @@ bibliography: references.bib
 
 # Let them eat cake first! {#cake}
 
-![](images/icons8-cake-64.png){.cover} Start teaching R with visualisation.
-This means jumping over installation details, which we'll discuss in [cherish day one](\#dayone) as well as basics of the R syntax.
-The "let them eat
-cake first" approach, where students first see an example of a complex data visualisation, which they will be able to build by the end of the course you're teaching, and then slowly work their way
-through the building blocks [@çetinkaya-rundel2020]. This approach is also presented in @wang2017data, which advocates for "bringing big ideas into intro stats early and often".
+![](images/icons8-cake.png){.cover width="100"} Start teaching R with visualisation.
+This means jumping over installation details, which we'll discuss in [cherish day one](#dayone) as well as basics of the R syntax.
+The "let them eat cake first" approach, where students first see an example of a complex data visualisation, which they will be able to build by the end of the course you're teaching, and then slowly work their way through the building blocks [@çetinkaya-rundel2020].
+This approach is also presented in @wang2017data, which advocates for "bringing big ideas into intro stats early and often".
 
 ## Slides
 
@@ -18,12 +17,9 @@ through the building blocks [@çetinkaya-rundel2020]. This approach is also pres
 ```
 ## Your turn
 
-You have two options for this exercise:
+### Do
 
--   Option 1: Voting patterns of countries in the UN General Assembly
-
--   Option 2: COVID-19 fatality numbers across the globe
-
+You have two options for this exercise.
 Pick one and complete it.
 Optionally, try the other one as well.
 
@@ -32,40 +28,48 @@ You will use RStudio Cloud for these exercises.
 Click [here](https://rstudio.cloud/spaces/116472/join?access_code=gDHGlJsqAISVgo6FWUpd4FKfZIe6rULO%2FoLvjC85) to join the RStudio Cloud workspace for this workshop.
 :::
 
-### Option 1 - UN Votes
+-   **Option 1:** Voting patterns of countries in the UN General Assembly
 
--   Start the project titled `01a - UN Votes`.
+    -   Start the project titled **01a - UN Votes**.
 
--   In the Files pane (bottom right corner), spot the file called `unvotes.Rmd`.
+    -   In the Files pane (bottom right corner), spot the file called `unvotes.Rmd`.
 
--   Open it and click "Knit".
+    -   Open it and click "Knit".
 
--   Then...
+    -   Then...
 
-    -   Go back to the file and change your name on top (in the `yaml` -- we'll talk about what this means later) and knit again.
-    -   Change the country names to those you're interested in. Spelling and capitalization must match how the countries appear in the data, so take a peek at the Appendix to confirm spelling.
-    -   Knit again. Voila, your first data visualization!
+        -   Go back to the file and change your name on top of the document and knit again.
+        -   Change the country names to those you're interested in. Spelling and capitalization must match how the countries appear in the data, so take a peek at the Appendix to confirm spelling.
+        -   Knit again. Voila, your first data visualization!
 
-### Option 2 - COVID-19
+-   **Option 2:** COVID-19 fatality numbers across the globe
 
--   Start the project titled `01b - COVID-19`.
+    -   Start the project titled **01b - COVID-19**.
 
--   In the Files pane (bottom right corner), spot the file called `covid.Rmd`.
+    -   In the Files pane (bottom right corner), spot the file called `covid.Rmd`.
 
--   Open it and click "Knit".
+    -   Open it and click "Knit".
 
--   Then...
+    -   Then...
 
-    -   Go back to the file and change your name on top (in the `yaml` -- we'll talk about what this means later) and knit again.
+        -   Go back to the file and change your name on top of the document and knit again.
 
-    -   Change the country names to those you're interested in.
-        Spelling and capitalization must match how the countries appear in the data, so take a peek at the Appendix to confirm spelling.
+        -   Change the country names to those you're interested in.
+            Spelling and capitalization must match how the countries appear in the data, so take a peek at the Appendix to confirm spelling.
 
-    -   Knit again.
-        Voila, your first data visualization!
+        -   Knit again.
+            Voila, your first data visualization!
+
+### Discuss
+
+When you're done with the exercises, discuss with others in your breakout group how you would adapt such an exercise for your teaching.
+Which dataset would you use?
+Don't worry too much about feasibility (e.g. is such data easily accessible), instead focus on what data/questions audiences you generally teach would be interested in.
 
 ## More resources
 
 In addition to the referenced articles, you might enjoy the following resources if you'd like to read / hear / watch more on this topic.
 
--   🎥 [Let them eat cake (first)!](https://youtu.be/RsVOrpXAPXo?t=1007)
+::: {.video}
+[Let them eat cake (first)!](https://youtu.be/RsVOrpXAPXo?t=1007)
+:::
