--- a/02-dayone.Rmd
+++ b/02-dayone.Rmd
@@ -1,3 +1,3 @@
 # Cherish day one {#dayone}
 
-\- using rstudio cloud for teaching
+![](images/icons8-new-year-calendar-100.png){.cover} Use rstudio cloud for teaching
