--- a/05-visual.Rmd
+++ b/05-visual.Rmd
@@ -1,5 +1,7 @@
 # Leverage visuals {#visual}
 
+![](images/icons8-picture-100.png){.cover} Live code early and often
+
 \- and non-visuals
 
 \- annotation
