--- a/10-discover.Rmd
+++ b/10-discover.Rmd
@@ -1,5 +1,7 @@
 # Optimize discoverability {#discover}
 
+![](images/icons8-search-more-100.png){.cover} Live code early and oftens
+
 \- teaching short term
 
 \- teaching long term
