Re-org and clean up

--- a/00-outline.Rmd
+++ b/00-outline.Rmd
@@ -17,15 +17,15 @@ All times shown are in ET.
 +===============+=======================================================+
 | 08:00 - 08:15 | Introduction                                          |
 +---------------+-------------------------------------------------------+
-| 08:15 - 08:55 | 🍰 Let them eat cake first!                            |
+| 08:15 - 08:55 | Let them eat cake first!                              |
 +---------------+-------------------------------------------------------+
-|               | 🗓️ Cherish day one                                    |
+|               | Cherish day one                                       |
 +---------------+-------------------------------------------------------+
 | 08:55 - 09:05 | ☕ Break                                               |
 +---------------+-------------------------------------------------------+
-| 09:05 - 10:00 | ⌨️ Live code, early and often                         |
+| 09:05 - 10:00 | Live code, early and often                            |
 +---------------+-------------------------------------------------------+
-|               | 💻 Provide feedback, instantly                         |
+|               | Define and pronounce                                  |
 +---------------+-------------------------------------------------------+
 
 ## Day two {.unnumbered}
@@ -35,17 +35,17 @@ All times shown are in ET.
 +===============+=======================================================+
 | 08:00 - 08:10 | Recap                                                 |
 +---------------+-------------------------------------------------------+
-| 08:10 - 08:55 | 🖼️ Leverage visuals                                   |
+| 08:10 - 08:55 | Provide feedback, instantly                           |
 +---------------+-------------------------------------------------------+
-|               | ℹ️ Help with finding help                             |
+|               | Leverage visuals                                      |
 +---------------+-------------------------------------------------------+
-|               | 🗣️ Define and pronounce terms                         |
+|               | Help with finding help                                |
 +---------------+-------------------------------------------------------+
 | 08:55 - 09:05 | ☕ Break                                               |
 +---------------+-------------------------------------------------------+
-| 09:05 - 10:00 | 🌈 Highlight diversity                                 |
+| 09:05 - 10:00 | Highlight diversity                                   |
 +---------------+-------------------------------------------------------+
-|               | 🖌️ Make room for creativity                           |
+|               | Make room for creativity                              |
 +---------------+-------------------------------------------------------+
-|               | 🔎 Optimize discoverability                            |
+|               | Optimize discoverability                              |
 +---------------+-------------------------------------------------------+
