--- a/10-discover.Rmd
+++ b/10-discover.Rmd
@@ -1,9 +1,9 @@
 # Optimize discoverability {#discover}
 
-![](images/icons8-search-more-100.png){.cover} Live code early and oftens
+![](images/icons8-search-more-100.png){.cover} How to make your materials easily discoverable by people who know that they exist (your students) as well as by people who don't.
 
-\- teaching short term
+<!--# teaching short term, teaching long term, licensing -->
 
-\- teaching long term
+------------------------------------------------------------------------
 
-\- licensing
+Materials to be posted.
