Add pedagogy tips from teaching tech together

--- a/materials/03-livecode/03-livecode.Rmd
+++ b/materials/03-livecode/03-livecode.Rmd
@@ -117,7 +117,9 @@ class: inverse, middle
 
 - **Keep in mind:** Audience watching on smaller devices
   
-- **Tip:** If you have a live audience, give them plenty of opportunity and simple tooling to participate (e.g. Zoom chat)
+- **Tips:**
+  - Test audience experience in a test run
+  - If you have a live audience, give them plenty of opportunity and simple tooling to participate (e.g. Zoom chat)
 
 ---
 
@@ -131,6 +133,42 @@ class: inverse, middle
 
 ---
 
+## Livecoding pedagogy
+
+- Build in delinerate fumbles and embrace your real mistakes
+
+--
+- Ask for predictions
+
+--
+- Take it slow
+
+--
+- Be seen and heard
+
+--
+- Mirror your learner's environment (then walk them through customisation)
+
+--
+- Use screen wisely
+
+--
+- Double devices (when possible)
+
+--
+- Go beyond the code: draw diagrams
+
+--
+- Improvise (particularly with a live audience)
+
+.footnote[
+.small[
+Greg Wilson. [Teaching Tech Together: How to Make Your Lessons Work and Build a Teaching Community around Them](https://teachtogether.tech/). CRC Press, 2019.
+]
+]
+
+---
+
 ## Livecoding tips
 
 - Omit or fully narrate keyboard shortcuts
@@ -139,7 +177,7 @@ class: inverse, middle
 - If need to type passwords, keep "off screen" notes handy that you can copy-paste from
 
 --
-- Avoid switching between screens
+- Avoid switching between screens, disable notifications
 
 ```{r echo = FALSE}
 knitr::include_graphics("images/shiny-livecode.jpeg")
