--- a/materials/03-livecode/03-livecode.Rmd
+++ b/materials/03-livecode/03-livecode.Rmd
@@ -193,6 +193,9 @@ Greg Wilson. [Teaching Tech Together: How to Make Your Lessons Work and Build a 
 - If need to type passwords, keep "off screen" notes handy that you can copy-paste from
 
 --
+- Use an RStudio addin to quickly switch to "factory settings" (e.g. `r emo::ji("package")` [addmins](https://github.com/mine-cetinkaya-rundel/addmins/blob/master/R/use_teach_mode.R))
+
+--
 - Avoid switching between screens, disable notifications
 
 ```{r echo = FALSE}
